IsolatedExecutionContext to handle ResourceMonitoringProcessExecutor case
Summary: ^

Reviewed By: bobyangyf

fbshipit-source-id: d54c5edd7d3e9cd0fd8ab8808decf2cce8df19b8